Implement 2-51-balance-adjustment
